SUBDIRS= compat librw network bob_server bob_admin bob_client bob_client/format_bsdi bob_client/format_des bob_client/format_eggdrop bob_client/format_lotus5 bob_client/format_md5 bob_client/format_mscash bob_client/format_mysql bob_client/format_nsldap bob_client/format_nt bob_client/format_oracle bob_client/format_rawMD5 bob_client/format_rawsha1 bob_client/libciphers bob_python_server
noinst_HEADERS = config_types.h queue.h btb-data.h btb.h config_types.h

